--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -4,5 +4,5 @@
   flex-direction: column;
   position: relative;
   overflow: hidden;
-  z-index: -4;
+  z-index: 1;
 }
